test/expected/explain_fvv_v.out
explain void f( void, void )
                ^
17: error: "void" must be only parameter if specified
